<resources>
    <string name="app_name">AD News</string>
    <string name="base_url">https://newsapi.org</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sources">Sources</string>
    <string name="everything">Everything</string>
    <string name="headlines">Headlines</string>
    <string name="search">Search…</string>
    <string name="select_category">Select category…</string>
    <string name="select_country">Select country…</string>
    <string name="search_sources">Search sources…</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="search_in_title">Search in title…</string>
    <string name="search_domains">Search domains…</string>
    <string name="exclude_domains">Exclude domains…</string>
    <string name="from">From…</string>
    <string name="to">To…</string>
    <string name="search_country">Search country…</string>
    <string name="search_category">Search category…</string>
    <string name="search_language">Search language…</string>
    <string name="sort_by">Sort by…</string>
    <string name="read_more">Read more…</string>
</resources>
