<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.fragments.FilterFragment"
        android:background="@color/colorGrey"
        android:orientation="vertical"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/filters"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/text_view_country"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/search_country"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"
            tools:layout_editor_absoluteX="10dp" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@+id/text_view_country"
            app:ms_dropdown_max_height="200dp"/>

        <TextView
            android:id="@+id/text_view_category"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/search_category"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/spinner_country"
            tools:layout_editor_absoluteX="10dp" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@+id/text_view_category"
            app:ms_dropdown_max_height="200dp"/>

        <TextView
            android:id="@+id/text_view_language"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/search_language"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/spinner_category"
            tools:layout_editor_absoluteX="10dp" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@id/text_view_language"
            app:ms_dropdown_max_height="200dp"/>

        <TextView
            android:id="@+id/text_view_sort_by"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/sort_by"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/spinner_language"
            tools:layout_editor_absoluteX="10dp" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_sort_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@+id/text_view_sort_by"
            app:ms_dropdown_max_height="200dp"/>

        <EditText
            android:id="@+id/edit_text_sources"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/search_sources"
            android:textColorHint="@color/colorGrey"
            android:inputType="text"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:paddingLeft="25dp"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/spinner_sort_by"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_text_q_in_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/search_in_title"
            android:textColorHint="@color/colorGrey"
            android:inputType="text"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:paddingLeft="25dp"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_sources"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_text_domains"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/search_domains"
            android:textColorHint="@color/colorGrey"
            android:inputType="text"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:paddingLeft="25dp"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_q_in_title"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_text_exclude_domains"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/exclude_domains"
            android:textColorHint="@color/colorGrey"
            android:inputType="text"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:paddingLeft="25dp"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_domains"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_text_from"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/from"
            android:textColorHint="@color/colorGrey"
            android:inputType="date"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:paddingLeft="25dp"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_exclude_domains"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_text_to"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/to"
            android:textColorHint="@color/colorGrey"
            android:inputType="date"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:paddingLeft="25dp"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_from"
            android:importantForAutofill="no" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="closeFilterArticle"
            android:src="@drawable/ic_close_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:onClick="applyFilters"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_to"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>